--- a/src/main/resources/templates/WebKhachHang/rut-tien.html
+++ b/src/main/resources/templates/WebKhachHang/rut-tien.html
@@ -235,7 +235,7 @@
 
     .split-container {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      /*grid-template-columns: 1fr 1fr;*/
       gap: 3rem;
       align-items: start;
     }
