--- a/src/main/resources/templates/WebKhachHang/chitietsanpham.html
+++ b/src/main/resources/templates/WebKhachHang/chitietsanpham.html
@@ -562,7 +562,7 @@
                      style="display:none"></div>
 
                 <div th:if="${productDetail.discountCampaignName != null}" class="text-sm text-green-600 mt-1">
-                    <span th:text="'Giảm giá: ' + ${productDetail.discountCampaignName}"></span>
+<!--                    <span th:text="'Giảm giá: ' + ${productDetail.discountCampaignName}"></span>-->
                 </div>
             </div>
 
